fix title spacing

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ p {
 
 .site-brand {
   font-size: 1.5rem;
+  line-height: 2.2rem;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 0.35em;
